QA fix z-index of stretched textareas to stay in front of code editor

--- a/magnolia-ui-vaadin-common-widgets/src/main/resources/VAADIN/themes/admincentraltheme/form.scss
+++ b/magnolia-ui-vaadin-common-widgets/src/main/resources/VAADIN/themes/admincentraltheme/form.scss
@@ -357,7 +357,7 @@ fieldset {
   position: absolute;
   right: 10px;
   top: 45px;
-  z-index: 3;
+  z-index: 5;
 }
 
 .textarea-stretcher.stretched.rich-text {
